add option to change permissions